@@ -1,3 +1,6 @@
 [B]Version 1.1.48[/B]
 kissjav - new site
 homemoviestube - new site
+missav - new site
+pornwild - added jump to page number (Next Page - context menu)
+thepornfull - fix listing
